Material nodes, Attribute node: crash if attempting to use an ID property #84063

Closed
opened 2020-12-23 00:47:16 +01:00 by Stanislav Blinov · 10 comments

Blender Version
Broken:

  • 2.92.0 Alpha, branch: master, commit date: 2020-12-22 04:50, hash: 9f34f2b20d
  • 2.92.0 Alpha, branch: master, commit date: 2020-11-19 22:15, hash: fdd3032f8f
    Worked: 2.91

Short description of error
Attempting to use parent as an ID in an Attribute node crashes Blender.

Exact steps for others to reproduce the error

  • Open Blender.
  • Add a material to an object.
  • Add an Attribute node to the material.
  • Type parent as the attribute into the Attribute node.
  • Create another object and parent the first object to it.
  • Switch to rendered mode or material preview.

Alternatively:
Load the attached .blend and parent the cube to another object.

attr_prop_issue.blend

**Blender Version** Broken: - 2.92.0 Alpha, branch: master, commit date: 2020-12-22 04:50, hash: `9f34f2b20d` - 2.92.0 Alpha, branch: master, commit date: 2020-11-19 22:15, hash: `fdd3032f8f` Worked: 2.91 **Short description of error** Attempting to use *parent* as an ID in an Attribute node crashes Blender. **Exact steps for others to reproduce the error** - Open Blender. - Add a material to an object. - Add an *Attribute* node to the material. - Type `parent` as the attribute into the *Attribute* node. - Create another object and parent the first object to it. - Switch to rendered mode or material preview. Alternatively: Load the attached .blend and parent the cube to another object. [attr_prop_issue.blend](https://archive.blender.org/developer/F9525923/attr_prop_issue.blend)

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Alternatively, just change the name of the attribute to 'data', that'd also prompt a crash.

Alternatively, just change the name of the attribute to 'data', that'd also prompt a crash.

Added subscriber: @rjg

Added subscriber: @rjg

I can confirm this crash.

rna_ensure_property(PropertyRNA * prop) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_access.c:653)
RNA_property_type(PropertyRNA * prop) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_access.c:1156)
drw_uniform_property_lookup(ID * id, const char * name, float * r_data) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_instance_data.c:636)
drw_uniform_attribute_lookup(GPUUniformAttr * attr, Object * ob, Object * dupli_parent, DupliObject * dupli_source, float * r_data) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_instance_data.c:699)
drw_uniform_attrs_pool_update(GHash * table, GPUUniformAttrList * key, DRWResourceHandle * handle, Object * ob, Object * dupli_parent, DupliObject * dupli_source) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_instance_data.c:724)
drw_resource_handle(DRWShadingGroup * shgroup, float (*)- [x] obmat, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager_data.c:620)
DRW_shgroup_call_ex(DRWShadingGroup * shgroup, Object * ob, float (*)- [x] obmat, struct GPUBatch * geom, _Bool bypass_culling, void * user_data) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager_data.c:777)
EEVEE_materials_cache_populate(EEVEE_Data * vedata, EEVEE_ViewLayerData * sldata, Object * ob, _Bool * cast_shadow) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/eevee/eevee_materials.c:856)
EEVEE_cache_populate(void * vedata, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/eevee/eevee_engine.c:125)
drw_engines_cache_populate(Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1096)
DRW_draw_render_loop_ex(struct Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1604)
DRW_draw_view(const bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1511)
view3d_draw_view(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1595)
view3d_main_region_draw(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1617)
ED_region_do_draw(bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:546)
wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:731)
wm_draw_window(bContext * C, wmWindow * win) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:872)
wm_draw_update(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1073)
WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:641)
main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522)
I can confirm this crash. ```lines rna_ensure_property(PropertyRNA * prop) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_access.c:653) RNA_property_type(PropertyRNA * prop) (/home/dev/01-data/01-git/blender-git/blender/source/blender/makesrna/intern/rna_access.c:1156) drw_uniform_property_lookup(ID * id, const char * name, float * r_data) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_instance_data.c:636) drw_uniform_attribute_lookup(GPUUniformAttr * attr, Object * ob, Object * dupli_parent, DupliObject * dupli_source, float * r_data) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_instance_data.c:699) drw_uniform_attrs_pool_update(GHash * table, GPUUniformAttrList * key, DRWResourceHandle * handle, Object * ob, Object * dupli_parent, DupliObject * dupli_source) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_instance_data.c:724) drw_resource_handle(DRWShadingGroup * shgroup, float (*)- [x] obmat, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager_data.c:620) DRW_shgroup_call_ex(DRWShadingGroup * shgroup, Object * ob, float (*)- [x] obmat, struct GPUBatch * geom, _Bool bypass_culling, void * user_data) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager_data.c:777) EEVEE_materials_cache_populate(EEVEE_Data * vedata, EEVEE_ViewLayerData * sldata, Object * ob, _Bool * cast_shadow) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/eevee/eevee_materials.c:856) EEVEE_cache_populate(void * vedata, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/eevee/eevee_engine.c:125) drw_engines_cache_populate(Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1096) DRW_draw_render_loop_ex(struct Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1604) DRW_draw_view(const bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1511) view3d_draw_view(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1595) view3d_main_region_draw(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1617) ED_region_do_draw(bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:546) wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:731) wm_draw_window(bContext * C, wmWindow * win) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:872) wm_draw_update(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1073) WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:641) main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522) ```

This issue was referenced by 9d04fa39d1

This issue was referenced by 9d04fa39d13b75b207fa7ab0315cb7731ecfff06

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-12-23 15:51:14 +01:00
Brecht Van Lommel was unassigned by Robert Guetzkow 2020-12-23 15:58:07 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Robert Guetzkow self-assigned this 2020-12-23 15:58:56 +01:00

@brecht Sorry I didn't notice that you've fixed this already while I was editing the task description.

@brecht Sorry I didn't notice that you've fixed this already while I was editing the task description.
Robert Guetzkow removed their assignment 2020-12-23 15:59:43 +01:00
Brecht Van Lommel was assigned by Robert Guetzkow 2020-12-23 15:59:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84063
No description provided.