Fix T84063: crash reading pointer properties in Attribute shader node

Path resolving can find e.g. a datablock rather than a float or integer,
treat that as a failure to find a valid property.